.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
09:59:20 **** Rebuild of configuration Debug for project clase 12 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Nacionalidad.o" "..\\src\\Nacionalidad.c" 
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\TipoProducto.o" "..\\src\\TipoProducto.c" 
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Producto.o" "..\\src\\Producto.c" 
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\OtrasFunciones.o" "..\\src\\OtrasFunciones.c" 
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Nexo.o" "..\\src\\Nexo.c" 
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\IngresarDatos.o" "..\\src\\IngresarDatos.c" 
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\clase 12.o" "..\\src\\clase 12.c" 
gcc -o "clase 12.exe" "src\\IngresarDatos.o" "src\\Nacionalidad.o" "src\\Nexo.o" "src\\OtrasFunciones.o" "src\\Producto.o" "src\\TipoProducto.o" "src\\clase 12.o" 
Info: Nothing to build for clase 12
10:09:07 **** Incremental Build of configuration Debug for project clase 12 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Nexo.o" "..\\src\\Nexo.c" 
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\OtrasFunciones.o" "..\\src\\OtrasFunciones.c" 
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\clase 12.o" "..\\src\\clase 12.c" 
gcc -o "clase 12.exe" "src\\IngresarDatos.o" "src\\Nacionalidad.o" "src\\Nexo.o" "src\\OtrasFunciones.o" "src\\Producto.o" "src\\TipoProducto.o" "src\\clase 12.o" 
11:57:40 **** Incremental Build of configuration Debug for project clase 12 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\clase 12.o" "..\\src\\clase 12.c" 
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Nexo.o" "..\\src\\Nexo.c" 
gcc -o "clase 12.exe" "src\\IngresarDatos.o" "src\\Nacionalidad.o" "src\\Nexo.o" "src\\OtrasFunciones.o" "src\\Producto.o" "src\\TipoProducto.o" "src\\clase 12.o" 
19:59:26 **** Incremental Build of configuration Debug for project clase 12 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Nexo.o" "..\\src\\Nexo.c" 
..\src\Nexo.c: In function 'tiposMasCantidad':
..\src\Nexo.c:279:2: error: unknown type name 'eAuxiliar'
  eAuxiliar auxiliar[tamTip];
  ^~~~~~~~~
..\src\Nexo.c:285:14: error: request for member 'contador' in something not a structure or union
   auxiliar[i].contador = 0;
              ^
..\src\Nexo.c:286:14: error: request for member 'id' in something not a structure or union
   auxiliar[i].id = unTipo[i].idTipo;
              ^
..\src\Nexo.c:300:25: error: request for member 'contador' in something not a structure or union
              auxiliar[i].contador++;
                         ^
..\src\Nexo.c:309:38: error: request for member 'contador' in something not a structure or union
     if(i == 0 || maximo < auxiliar[i].contador)
                                      ^
..\src\Nexo.c:311:26: error: request for member 'contador' in something not a structure or union
      maximo = auxiliar[i].contador;
                          ^
..\src\Nexo.c:318:29: error: request for member 'contador' in something not a structure or union
     if(maximo == auxiliar[i].contador)
                             ^
..\src\Nexo.c:322:21: error: request for member 'id' in something not a structure or union
       if(auxiliar[i].id == unTipo[i].idTipo)
                     ^
..\src\Nexo.c:279:12: warning: variable 'auxiliar' set but not used [-Wunused-but-set-variable]
  eAuxiliar auxiliar[tamTip];
            ^~~~~~~~
19:59:30 **** Incremental Build of configuration Debug for project clase 12 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\clase 12.o" "..\\src\\clase 12.c" 
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Nexo.o" "..\\src\\Nexo.c" 
..\src\Nexo.c: In function 'tiposMasCantidad':
..\src\Nexo.c:279:2: error: unknown type name 'eAuxiliar'
  eAuxiliar auxiliar[tamTip];
  ^~~~~~~~~
..\src\Nexo.c:285:14: error: request for member 'contador' in something not a structure or union
   auxiliar[i].contador = 0;
              ^
..\src\Nexo.c:286:14: error: request for member 'id' in something not a structure or union
   auxiliar[i].id = unTipo[i].idTipo;
              ^
..\src\Nexo.c:300:25: error: request for member 'contador' in something not a structure or union
              auxiliar[i].contador++;
                         ^
..\src\Nexo.c:309:38: error: request for member 'contador' in something not a structure or union
     if(i == 0 || maximo < auxiliar[i].contador)
                                      ^
..\src\Nexo.c:311:26: error: request for member 'contador' in something not a structure or union
      maximo = auxiliar[i].contador;
                          ^
..\src\Nexo.c:318:29: error: request for member 'contador' in something not a structure or union
     if(maximo == auxiliar[i].contador)
                             ^
..\src\Nexo.c:322:21: error: request for member 'id' in something not a structure or union
       if(auxiliar[i].id == unTipo[i].idTipo)
                     ^
..\src\Nexo.c:279:12: warning: variable 'auxiliar' set but not used [-Wunused-but-set-variable]
  eAuxiliar auxiliar[tamTip];
            ^~~~~~~~
20:00:01 **** Incremental Build of configuration Debug for project clase 12 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Nexo.o" "..\\src\\Nexo.c" 
gcc -o "clase 12.exe" "src\\IngresarDatos.o" "src\\Nacionalidad.o" "src\\Nexo.o" "src\\OtrasFunciones.o" "src\\Producto.o" "src\\TipoProducto.o" "src\\clase 12.o" 
20:00:22 **** Incremental Build of configuration Debug for project clase 12 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\clase 12.o" "..\\src\\clase 12.c" 
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Nexo.o" "..\\src\\Nexo.c" 
gcc -o "clase 12.exe" "src\\IngresarDatos.o" "src\\Nacionalidad.o" "src\\Nexo.o" "src\\OtrasFunciones.o" "src\\Producto.o" "src\\TipoProducto.o" "src\\clase 12.o" 
